welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: type mismatch;
 found   : Int(6)
 required: Boolean
  if (0<day<6) {
            ^