welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (0<day<6) {
    if (vacation==true) {
      return "10:00"
    } else return "7:00"
  } else if (vacation==true) {
      return "off"
         } else return "10:00"
}